# MeowLens

./: .gitignore  Cargo.toml  LICENSE  README.md
report/: .latexmkrc  final.bib  final.tex
src/: camera.rs  consts.rs  light.rs  main.rs  renderer.rs  scene.rs
src/material/: general.rs  mod.rs
src/object/: mod.rs
src/object/geometry/: mod.rs  sphere.rs  triangle.rs  util.rs
