[package]
name = "meow_lens"
version = "0.1.0"
authors = ["Liu Xiaoyi <circuitcoder0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.21.1"
kdtree = "0.6.0"
image = "0.23.5"
paw = "1.0.0"
structopt = { version = "0.3.14", features = ["paw"] }
env_logger = "0.7.1"
log = "0.4.8"
itertools = "0.9.0"
rand = "0.7.3"
crossbeam-utils = "0.7.2"
