[package]
name = "meow_lens"
version = "0.1.0"
authors = ["Liu Xiaoyi <circuitcoder0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.21.1", features = ["serde-serialize"] }
kdtree = "0.6.0"
image = "0.23.5"
paw = "1.0.0"
structopt = { version = "0.3.14", features = ["paw"] }
env_logger = "0.7.1"
log = "0.4.8"
itertools = "0.9.0"
rand = "0.7.3"
crossbeam-utils = "0.7.2"
rand_distr = "0.2.2"
crossbeam-channel = "0.4.2"
serde_json = "1.0.55"
serde = { version = "1.0.113", features = ["derive"] }
